platform/aws-platform-showcase/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-showcase-api
  namespace: platform-showcase
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
spec:
  selector:
    app: platform-showcase-api
  ports:
    - name: http
      port: 80
      targetPort: http
