platform/aws-platform-showcase/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-showcase-api
  namespace: platform-showcase
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - host: api.platform.virajbahulkar.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-showcase-api
                port:
                  number: 80
